k8s-rewrite/charts/media-stack/plex/deployment.yaml
# Plex Media Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        branconet.io/type: app
      annotations:
        homepage.group: Media
        homepage.name: Plex
        homepage.icon: "https://plex.tv/sites/static/img/logo.png"
        homepage.href: "http://plex.branconet.local/"
        homepage.description: Plex Media Server
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        - name: pvr
          mountPath: /pvr
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 4Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: plex-tv-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: plex-movies-pvc
        - name: pvr
          persistentVolumeClaim:
            claimName: plex-pvr-pvc
      # GPU device request for hardware transcoding
      # tolerations:
      # - key: nvidia.com/gpu
      #   operator: Exists
      #   effect: NoSchedule
