k8s-rewrite/charts/media-stack/plex/service.yaml
# Plex Service
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 32400
    targetPort: 32400
    name: http
  selector:
    app: plex
