k8s-rewrite/charts/media-stack/plex/ingressroute.yaml
# Traefik IngressRoute for Plex
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
  namespace: plex
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`plex.branconet.local`)
    kind: Rule
    services:
    - name: plex
      port: 32400
